Added start of HTML base

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,52 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
+
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <header>
+      <nav>
+        <h1>The Daily Kitteh</h1>
+        <ul>
+          <li><a href="#">Feral Adventures</a></li>
+          <li><a href="#">Kibble Kibbitz</a></li>
+          <li><a href="#">Tall Twitch Tales</a></li>
+          <li><a href="#">Sunny Window Reviews</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div>
+        <img src="http://placekitten.com/200/200" alt="Cute Kitty" />
+      </div>
+      <h2>Busy Kittehs Very Busy</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
+        varius lorem ac sodales. Ut vestibulum nec urna eget lacinia. Nulla
+        scelerisque, purus ut dictum dapibus, leo urna pretium purus, laoreet
+        eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam erat
+        volutpat. Praesent mattis euismod turpis eget varius. Curabitur sit amet
+        sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut vitae mauris
+        est.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
+        varius lorem ac sodales. Ut vestibulum nec urna eget lacinia. Nulla
+        scelerisque, purus ut dictum dapibus, leo urna pretium purus, laoreet
+        eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam erat
+        volutpat. Praesent mattis euismod turpis eget varius. Curabitur sit amet
+        sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut vitae mauris
+        est.
+      </p>
+    </main>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Subscribe</a></li>
+          <li><a href="#">Pat the Editors</a></li>
+          <li><a href="#">Send us Catnip</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
