--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
-
   <body>
     <header>
       <nav>
@@ -23,26 +22,35 @@
     <main>
       <div>
         <img src="http://placekitten.com/200/200" alt="Cute Kitty" />
+        <h3>Kittehs of the Day</h3>
+        <ul>
+          <li>Spot</li>
+          <li>Adeline</li>
+          <li>Perspex</li>
+          <li>Mr. Grumpy</li>
+        </ul>
       </div>
-      <h2>Busy Kittehs Very Busy</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
-        varius lorem ac sodales. Ut vestibulum nec urna eget lacinia. Nulla
-        scelerisque, purus ut dictum dapibus, leo urna pretium purus, laoreet
-        eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam erat
-        volutpat. Praesent mattis euismod turpis eget varius. Curabitur sit amet
-        sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut vitae mauris
-        est.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
-        varius lorem ac sodales. Ut vestibulum nec urna eget lacinia. Nulla
-        scelerisque, purus ut dictum dapibus, leo urna pretium purus, laoreet
-        eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam erat
-        volutpat. Praesent mattis euismod turpis eget varius. Curabitur sit amet
-        sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut vitae mauris
-        est.
-      </p>
+      <div>
+        <h2>Busy Kittehs Very Busy</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
+          varius lorem ac sodales. Ut vestibulum nec urna eget lacinia. Nulla
+          scelerisque, purus ut dictum dapibus, leo urna pretium purus, laoreet
+          eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam
+          erat volutpat. Praesent mattis euismod turpis eget varius. Curabitur
+          sit amet sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut
+          vitae mauris est.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
+          varius lorem ac sodales. Ut vestibulum nec urna eget lacinia. Nulla
+          scelerisque, purus ut dictum dapibus, leo urna pretium purus, laoreet
+          eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam
+          erat volutpat. Praesent mattis euismod turpis eget varius. Curabitur
+          sit amet sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut
+          vitae mauris est.
+        </p>
+      </div>
     </main>
 
     <footer>
