fotmatted a little bit

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <div>
+      <div class="kittens-of-day">
         <img src="http://placekitten.com/200/200" alt="Cute Kitty" />
         <h3>Kittehs of the Day</h3>
         <ul>
@@ -30,7 +30,7 @@
           <li>Mr. Grumpy</li>
         </ul>
       </div>
-      <div>
+      <div class="kitten-main-text">
         <h2>Busy Kittehs Very Busy</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
