added more formatting

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <div class="kittens-of-day">
-        <img src="http://placekitten.com/200/200" alt="Cute Kitty" />
+        <img src="http://placekitten.com/175/200" alt="Cute Kitty" />
         <h3>Kittehs of the Day</h3>
         <ul>
           <li>Spot</li>
@@ -39,7 +39,12 @@
           eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam
           erat volutpat. Praesent mattis euismod turpis eget varius. Curabitur
           sit amet sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut
-          vitae mauris est.
+          vitae mauris est.Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit. Sed vehicula varius lorem ac sodales. Ut vestibulum nec urna
+          eget lacinia. Nulla scelerisque, purus ut dictum dapibus, leo urna
+          pretium purus, laoreet eleifend elit velit vel arcu.Mauris sed
+          sollicitudin erat. Aliquam erat volutpat. Praesent mattis euismod
+          turpis eget varius.
         </p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vehicula
