--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,8 @@
           eleifend elit velit vel arcu. Mauris sed sollicitudin erat. Aliquam
           erat volutpat. Praesent mattis euismod turpis eget varius. Curabitur
           sit amet sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut
-          vitae mauris est.
+          vitae mauris est.Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit. Sed vehicula varius lorem ac sodales.Lorem ipsum dolor sit amet.
         </p>
       </div>
     </main>
