--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
           erat volutpat. Praesent mattis euismod turpis eget varius. Curabitur
           sit amet sapien aliquam, eleifend nunc tincidunt, facilisis ex. Ut
           vitae mauris est.Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit.
+          elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
       </div>
     </main>
